--- a/index.css
+++ b/index.css
@@ -17,7 +17,13 @@ button {
 
 h1 {
   text-align: center;
-  text-shadow: 2px 2px 5px red;
+  text-shadow: 2px 2px 5px black;
+  font-family: 'Graduate';
+  top: 100px;
+  text-transform: uppercase;
+  font-size: 50px;
+  color: #e67e22; 
+  
 }
 
 h2 {
@@ -32,7 +38,7 @@ h5 {
   text-align: center;
   text-shadow: 2px 2px 5px white;
 }
-h1, h2, p, ul, li {
+h2, p, ul, li {
   font-family: sans-serif;
 }
 li:hover {
